@@ -2,6 +2,7 @@
 	* do not send unneccessary updates when drawing a cursor
 	* ignore SIGPIPE; it is handled by EPIPE
 	* add an example how to use rfbDoCopyRect
+	* add experimental progressive updating (off by default)
 	
 2004-01-19  Karl Runge <runge@karlrunge.com>
 	* handle mouse button number mismatch
